TDD for Decimal Number