@@ -21,7 +21,7 @@
 		<checkstyle.version>10.3.2</checkstyle.version>
 		<jvm.options>
 			--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens
-			java.base/java.math=ALL-UNNAMED --add-opens json.parser/com.techatpark.sjson=ALL-UNNAMED
+			java.base/java.math=ALL-UNNAMED
 		</jvm.options>
 		<asm.version>9.2</asm.version>
 	</properties>
